Fix summary out of view on click

--- a/src/assets/styles/HtmlReset.css
+++ b/src/assets/styles/HtmlReset.css
@@ -166,7 +166,7 @@ summary {
 img {
   display: block;
   width: auto;
-  max-width: 70vw;
+  max-width: 80vw;
   height: auto;
-  max-height: 35vh;
+  max-height: 40vh;
 }
